# mlops-iris

./: databricks.yml  pyproject.toml
src/mlops_iris/: __init__.py
