[project]
name = "mlops-iris"
version = "0.1.0"
description = "Databricks MLOps with Asset Bundles"
readme = "README.md"
authors = [
    { name = "Mehmet Acikgoz", email = "acikgozmm@gmail.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.scripts]
mlops-iris = "mlops_iris:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where =["src"]


[tool.pytest.ini_options]
testpaths = [ "tests" ]
pythonpath = [ "." ]

[tool.coverage.run]
omit = ["*/__init__.py"]

[tool.ruff]
line-length = 120

lint.select = [
    "F",    # pyflakes rules
    "E",    # pycodestyle error rules
    "W",    # pycodestyle warning rules
    "B",    # flake8-bugbear rules
    "I",    # isort rules
    "UP",   # pyupgrade rules
    "SIM",  # flake8-simplify rules
    "ERA",  # eradicate rules
    "C",    # pylint convention rules
    "D",    # pydocstyle rules
    "ANN"   # flake8-annotations rules
]
lint.ignore = [
    "D107", # Missing docstring in `__init__`
    "D203", # incorrect-blank-line-before-class
    "D213", # multi-line-summary-second-line
    "E501", # line-too-long
    "C901", # too complex
    "ERA001", # commented out code
]

[tool.ruff.format]
indent-style = "space"
